--- a/schedule.html
+++ b/schedule.html
@@ -29,7 +29,7 @@
  
                                     <div id="freshmanschedule" style="overflow-y:scroll" class="modal">
                                       <div class="modal-content">
-                                        <h4>Freshman Football Schedule</h4>
+                                        <h4>2019 Freshman Football Schedule</h4>
                                         <p><table style="color:black;">
                                           <tbody>
                                             <tr>
@@ -37,54 +37,14 @@
                                               <th>Time</th>
                                               <th>Location</th>
                                             </tr>
-                                            <tr>
-                                              <td>August 20th</td>
-                                              <td>6:00 PM</td>
-                                              <td>@ Arlington</td>
-                                            </tr>
-                                            <tr>
-                                              <td>August 27th</td>
-                                              <td>6:30 PM</td>
-                                              <td>@ Covington</td>
-                                            </tr>
-                                            <tr>
-                                              <td>August 30th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Munford</td>
-                                            </tr>
-                                            <tr>
-                                              <td>September 6th</td>
-                                              <td>TBD</td>
-                                              <td>TBD</td>
-                                            </tr>
-                                            <tr>
-                                              <td>Septempber 10th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Braircrest</td>
-                                            </tr>
-                                            <tr>
-                                              <td>September 17th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Cordova</td>
-                                            </tr>
-                                            <tr>
-                                              <td>September 24th</td>
-                                              <td>5:30 PM</td>
-                                              <td>@ Houston</td>
-                                            </tr>
-                                            <tr>
-                                              <td>October 1st</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs White Station</td>
-                                            </tr>
-                                            <tr>
-                                              <td>October 15th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Bartlett</td>
-                                            </tr>
+<!-- begin Freshman Schedule -->
+
+
                                           </tbody>
+
+
                                         </table>
-                                          </p>
+                                </p>
                                 
                                           </p>
                                         </div>
@@ -95,7 +55,7 @@
 
 <div id="varsityschedule" style="overflow-y:scroll" class="modal">
                                       <div class="modal-content">
-                                        <h4>Varsity Football Schedule</h4>
+                                        <h4>2019 Varsity Football Schedule</h4>
                                         <p><table style="color:black;">
                                           <tbody>
                                             <tr>
