--- a/varsity.html
+++ b/varsity.html
@@ -85,7 +85,7 @@
 
                                                    <div id="varsityschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
-                                                  <h4>Varsity Football Schedule</h4>
+                                                  <h4>2019 Varsity Football Schedule</h4>
                                                   <p><table style="color:black;">
                                                     <tbody>
                                                       <tr>
