--- a/news.html
+++ b/news.html
@@ -105,6 +105,17 @@
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville Football News </center></h1>
 
 <hr class="featurette-divider">
+<div class="row featurette ml-2">
+  <div class="col-md-12 order-md-2 "> 
+          <h4 class="featurette-heading order-md-2 pl-2">August 23rd, 2019 - First Game Done!</h4><p class="lead">
+          <ul class="newsstuff ml-5">
+            <li>The dragons had a great season opener this past week! We welcomed back all of our friends and Collierville natives to a beautiful Friday Night. Heres to a great season!<br><br>#GoDragons
+               </li>
+         <li>  <img src="imgs/joetunnel.jpg" style="max-width:400px;max-height: 200px;height:auto;width:auto;background-color: black;"></li>
+          </ul>
+         </p>
+  </div>
+</div>
   <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
             <h4 class="featurette-heading order-md-2 pl-2">March 7th, 2019 - Kicking off a New Year with Head Coach Joe Roconni</h4><p class="lead">
