--- a/schedule.html
+++ b/schedule.html
@@ -88,44 +88,10 @@
                                               <th>Time</th>
                                               <th>Location</th>
                                             </tr>
-                                            <tr>
-                                              <td>August 20th</td>
-                                              <td>6:00 PM</td>
-                                              <td>@ Arlington (following Freshmen game)</td>
-                                            </tr>
-                                            <tr>
-                                              <td>August 27th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Ridgeway</td>
-                                            </tr>
-                                            <tr>
-                                              <td>Septempber 10th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Braircrest (Freshmen&Sophomore JV players ONLY)</td>
-                                            </tr>
-                                            <tr>
-                                              <td>September 17th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Cordova (following Freshmen game)</td>
-                                            </tr>
-                                            <tr>
-                                              <td>September 24th</td>
-                                              <td>5:30 PM</td>
-                                              <td>@ Houston</td>
-                                            </tr>
-                                            <tr>
-                                              <td>October 1st</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs White Station (following Freshmen game)</td>
-                                            </tr>
-                                            <tr>
-                                              <td>October 15th</td>
-                                              <td>6:00 PM</td>
-                                              <td>vs Bartlett <div class="col pl-4">
-<a style="background-color:#722D3C;" class="btn modal-trigger" href="#jvschedule"><font size="+1">JV </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
-</div>(following Freshmen game)</td>
-                                            </tr>
-                                          </tbody>
+<!-- begin JV Schedule -->
+
+
+                      </tbody>
                                         </table>
                                           </p>
                                         </div>
