--- a/varsity.html
+++ b/varsity.html
@@ -111,7 +111,7 @@
 
                                                  <div id="jvschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
-                                                  <h4>JV Football Schedule</h4>
+                                                  <h4>2019 JV Football Schedule</h4>
                                                   <p>
                                                   <table style="color:black;">
                                                     <tbody>
@@ -120,42 +120,8 @@
                                                         <th>Time</th>
                                                         <th>Location</th>
                                                       </tr>
-                                                      <tr>
-                                                        <td>August 20th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>@ Arlington (following Freshmen game)</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>August 27th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Ridgeway</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>Septempber 10th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Braircrest (Freshmen&Sophomore JV players ONLY)</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 17th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Cordova (following Freshmen game)</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 24th</td>
-                                                        <td>5:30 PM</td>
-                                                        <td>@ Houston</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>October 1st</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs White Station (following Freshmen game)</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>October 15th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Bartlett </td>
-  </div>(following Freshmen game)</td>
-                                                      </tr>
+<!-- begin Freshman Schedule -->
+
                                                     </tbody>
                                                   </table>
                                                     </p>
