--- a/varsity.html
+++ b/varsity.html
@@ -269,7 +269,7 @@
         </div>
         <!-- END FIXED BUTTONS -->
         <div class="overall">
-            <div class="centeredalt" style="color:white;">
+            <div class="centeredaltvarsity" style="color:white;">
                 <h1>
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;">  Varsity/ JV Football </center></h1>
 
