--- a/management.html
+++ b/management.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" type="text/css" href="/css/fonts/fonts.css" />
       <link rel="icon" href="img/favicon.ico">
       <link rel="stylesheet" href="css/style.css">
-      <title>Strive</title>
+      <title>CHS Dragon Football</title>
       <!-- Bootstrap core CSS -->
                 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
