seventh and eight

--- a/shared_components/navbar.html
+++ b/shared_components/navbar.html
@@ -50,7 +50,12 @@
               </div>
               <div class="column">
                 <span class="title">
-                  <a href="7thand8thgrade.html">7th/8th Grade</a>
+                  <a href="seventhgrade.html">7th Grade</a>
+                </span>
+              </div>
+              <div class="column">
+                <span class="title">
+                  <a href="eighthgrade.html">8th Grade</a>
                 </span>
               </div>
               <div class="column">
@@ -185,7 +190,10 @@
               <a href="freshman.html" target="_blank">Freshman</a>
             </li>
             <li>
-              <a href="7thand8thgrade.html" target="_blank">7th/8th Grade</a>
+              <a href="eighthgrade.html" target="_blank">8th Grade</a>
+            </li>
+            <li>
+              <a href="seventhgrade.html" target="_blank">7th Grade</a>
             </li>
             
             <li>
