--- a/content/7thgradeschedule.html
+++ b/content/7thgradeschedule.html
@@ -1,26 +1,19 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<form method="POST" id="form" action="http://163.172.159.83/v2/entry/mkkeffeler/Collierville_Football_Web/master/eighthgradecoaches">
+<form method="POST" id="form" action="http://163.172.159.83/v2/entry/mkkeffeler/Collierville_Football_Web/master/seventhgradeschedule">
    <input name="options[redirect]" type="hidden" value="http://chsdragonfootball.com">
-   <h3>8th Grade Coaches list</h3>
-   <br><label for="name">Name</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <h3>7th Grade Game Schedule</h3>
+   <br><label for="name">Date</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
-   <label for="Date">Title</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;
-   <label for="Date">Bio</label>
+   <label for="Date">Time</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
-   <label for="Date">Image Location</label>
-
+   <label for="Date">Location</label>
    <div id="dynamic_form">
     <!-- Input Form-->
    </div>
