--- a/eighthgrade.html
+++ b/eighthgrade.html
@@ -28,7 +28,7 @@
                                       <!-- MODALS FOR ALL THE COACHES -->
                                       <div id="maroonschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
-                                                  <h4>7th Grade Football Schedule</h4>
+                                                  <h4>8th Grade Football Schedule</h4>
                                                   <p>
                                                   <table style="color:black;">
                                                     <tbody>
@@ -88,7 +88,7 @@
 
                                                  <div id="maroonroster" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
-                                                  <h4>8th Grade Varsity Player Roster</h4>
+                                                  <h4>8th Grade Player Roster</h4>
                                                   <p>
                                                   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
                                                   
@@ -217,7 +217,7 @@
 
                                                  <div id="whiteroster" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
-                                                  <h4>8th Grade Varsity Player Roster</h4>
+                                                  <h4>8th Grade Player Roster</h4>
                                                   <p>
                                                   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
                                                   
@@ -381,13 +381,7 @@
                                                 </div>
 <div class="col-md-9">
                                                 <p class="pl-3"><h2>About 8th Grade Collierville Football</h2><br><br>
-                                                  Thank you for your interest in Collierville Dragon Football. There will be two combined 7/8th Grade teams this
-season. The Head Coaches will be Dan Holcomb and Jeff Bousson. All athletes will practice together the
-first week for evaluation. At the end of the week, they will be placed on the maroon or the white team. We
-will split teams as evenly as possible. Each combo team will consist of a Varsity (all 8th graders and some
-7th) and a JV team (7th grade only). Each team will play two games a night, a Varsity game followed by a JV
-game. Our two teams will not play each other in the regular season. We will play other teams with the same
-make up of players. The following are important dates and information.<br>
+                                                  The 8th Grade team details are below.<br>
 <br>The club only supplies home and away jerseys you have to purchase the rest. This includes:
 <div class="row">
 <div class="column">
