--- a/shared_components/navbar.html
+++ b/shared_components/navbar.html
@@ -100,7 +100,24 @@
                     </div>
                   </div>
                 </li>
-              </ul>
+                <li class="collection-item avatar">
+                  <div class="row">
+                    <div class="column">
+                      <img src="imgs/newdragon.png" alt="" class="circle">
+                      </div>
+                      <div class="column">
+                        <span class="title">
+                          <a href="sevenandeightyearolds.html">7 & 8 Year Old Team</a>
+                        </span>
+                      </div>
+                      <div class="column">
+                        <a class="secondary-content modal-trigger" href="#youngercoach">
+                          <i class="material-icons">contact_mail</i>
+                        </a>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
                                   <!-- end dropdown menu -->
                                   <!-- Start nav bar -->
 
@@ -201,6 +218,9 @@
             </li>
             <li>
               <a href="9and10yearold.html" target="_blank">9 and 10 Year Old Teams</a>
+            </li>
+            <li>
+              <a href="sevenandeightyearolds.html" target="_blank">7 and 8 Year Old Teams</a>
             </li>
           </ul>
         </div>
