seven and eight year old managemnet

--- a/content/sevenandeightyearoldschedule.html
+++ b/content/sevenandeightyearoldschedule.html
@@ -1,7 +1,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<form method="POST" id="form" action="http://163.172.159.83/v2/entry/mkkeffeler/Collierville_Football_Web/master/varsityschedule">
+<form method="POST" id="form" action="http://163.172.159.83/v2/entry/mkkeffeler/Collierville_Football_Web/master/sevenandeightyearoldschedules">
    <input name="options[redirect]" type="hidden" value="http://chsdragonfootball.com">
-   <h3>JV Game Schedule</h3>
+   <h3>7 and 8 Year Old Game Schedule</h3>
    <br><label for="name">Date</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
    &nbsp;&nbsp;&nbsp;&nbsp;
