news entries and corrections

--- a/news.html
+++ b/news.html
@@ -105,6 +105,9 @@
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Collierville Football News </center></h1>
 
 <hr class="featurette-divider">
+<!--  Add New Entries Below Here-->
+
+
 <div class="row featurette ml-2">
   <div class="col-md-12 order-md-2 "> 
           <h4 class="featurette-heading order-md-2 pl-2">August 23rd, 2019 - First Game Done!</h4><p class="lead">
