--- a/shared_components/navbar.html
+++ b/shared_components/navbar.html
@@ -54,18 +54,30 @@
                 </span>
               </div>
               <div class="column">
-                <span class="title">
-                  <a href="eighthgrade.html">8th Grade</a>
-                </span>
-              </div>
-              <div class="column">
                 <a class="secondary-content modal-trigger" href="#7th/8thcoach">
                   <i class="material-icons">contact_mail</i>
                 </a>
               </div>
             </div>
           </li>
-         
+          <li class="collection-item avatar">
+            <div class="row">
+              <div class="column">
+                <img src="imgs/newdragon.png" alt="" class="circle">
+                </div>
+                <div class="column">
+                  <span class="title">
+                    <a href="eighthgrade.html">8th Grade</a>
+                  </span>
+                </div>
+                      <div class="column">
+                  <a class="secondary-content modal-trigger" href="#7th/8thcoach">
+                    <i class="material-icons">contact_mail</i>
+                  </a>
+                </div>
+              </div>
+            </li>  
+
             <li class="collection-item avatar">
               <div class="row">
                 <div class="column">
